panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__preprocessor__test_empty_object_like_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/preprocessor/test_empty_object_like_macro.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      (f~0 `fn() -> void` (static f))
      (compound-statement
         (return ∅)))
   (function-definition
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `void` @void
               (addressof `ptr<fn() -> void>` @0
                  (f~0 `fn() -> void` (static f))))))))

----- stderr -----
