panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__preprocessor__test_function_like_macro_with_itself_in_argument_list.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/preprocessor/test_function_like_macro_with_itself_in_argument_list.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (x~1 `long long` @0) (sign-extend `long long` @0 (42 `int` @8)))
         (return
            (add `int` @8
               (27 `int` @8)
               (1 `int` @12))))))

----- stderr -----
